--- a/safetypass.html
+++ b/safetypass.html
@@ -7,7 +7,7 @@
 <script>
     var hash = CryptoJS.MD5("Message");
     //alert("Message: "+hash)
-    window.parent.postMessage("Meow","*");
+    window.parent.postMessage("Which Domain?","*");
     window.addEventListener("message", receiveMessage, false);
 
     function receiveMessage(event)
