--- a/safetypass.html
+++ b/safetypass.html
@@ -12,7 +12,7 @@
 
     function receiveMessage(event)
     {
-        alert(event.data());
+        alert(event.data);
         
           // ...
     }
