--- a/safetypass.html
+++ b/safetypass.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
+<script src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
 </head>
 <body>
 
