--- a/safetypass.html
+++ b/safetypass.html
@@ -20,7 +20,7 @@
 
     function receiveMessage(event)
     {
-        alert(event.data);
+        document.getElementById("domain").value=event.data;
         
           // ...
     }
