--- a/safetypass.html
+++ b/safetypass.html
@@ -1,6 +1,16 @@
 <html>
 <head>
 <script src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
+<style>
+    @font-face {
+    font-family: passwordFont;
+    src: url(password.ttf);
+}
+
+#domainpass {
+    font-family: passwordFont;
+}
+</style>
 </head>
 <body>
 
