--- a/safetypass.html
+++ b/safetypass.html
@@ -10,6 +10,18 @@
 #domainpass {
     font-family: passwordFont;
 }
+
+
+body {
+    font-family: passwordFont;
+}
+
+input, textarea, select{font-family:inherit;}
+
+.input{
+padding:5px;
+font-size:16px;
+}
 </style>
 </head>
 <body>
