--- a/safetypass.html
+++ b/safetypass.html
@@ -19,7 +19,7 @@ font-size:16px;
 }
 </style>
 </head>
-<body>
+<body bgcolor="#000000">
 
     <form>
         Domain: <input id="domain" type="text" name="domain"><br>
