--- a/safetypass.html
+++ b/safetypass.html
@@ -11,11 +11,15 @@
     font-family: passwordFont;
 }
 
+body{
+    color:white;
+}
 input, textarea, select{font-family:inherit;}
 
 .input{
 padding:5px;
 font-size:16px;
+color:black;
 }
 </style>
 </head>
