--- a/safetypass.html
+++ b/safetypass.html
@@ -58,11 +58,11 @@ color:black;
          <br>
         <div style="width: 100%; float:left">
             <div style="width: 50%; float:left">
-                 <input type="button" value="Generate Password" onclick="javascript: genPass();"/>
+                 <input type="button" formnovalidate value="Generate Password" onclick="javascript: genPass();"/>
             </div>
             
             <div style="width: 50%; float:right">
-               <input type="button" value="Generate Password" onclick="javascript: genPass();"/>
+               <input type="button" formnovalidate value="Generate Password" onclick="javascript: genPass();"/>
             </div>
         </div>
     </form>
