--- a/safetypass.html
+++ b/safetypass.html
@@ -93,6 +93,8 @@ width:100%;
         var domainPass=document.getElementById("domainpass");
         domainPass.setAttribute("value","A$"+hash.toString());
         domainPass.select();
+        domainPass.selectionStart=0;
+        domainPass.selectionEnd=domainPass.value.length;
         document.getElementById("copyMe").setAttribute("innerHTML","Copy the password above...")
     }
 
