--- a/safetypass.html
+++ b/safetypass.html
@@ -95,7 +95,7 @@ width:100%;
         domainPass.select();
         domainPass.selectionStart=0;
         domainPass.selectionEnd=domainPass.value.length;
-        document.getElementById("copyMe").setAttribute("innerHTML","Copy the password above...")
+        document.getElementById("copyme").setAttribute("innerHTML","Copy the password above...")
     }
 
     function doClose()
