--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@ takes a password and a domain and generates a site specific password. The passwo
 our never communicated with our server. To get started, drag the link below onto your bookmarks bar, and click it whenever
 you need a site speicifc password.
 <p>
-<a href="https://github.com/patrickms/SafetyPass/blob/gh-pages/safetypass.html">SafetyPass</a>
+<a href="javascript:(function(){var%20s=document.createElement('script');s.charset='UTF-8';s.src='//patrickms.github.io/SafetyPass/safetypass.js';document.body.appendChild(s)})();">SafetyPass</a>
 
+<p>
+<blockquote>
+javascript:(function(){var%20s=document.createElement('script');s.charset='UTF-8';s.src='//patrickms.github.io/SafetyPass/safetypass.js';document.body.appendChild(s)})();
+</blockquote>
 </body>
 </html>
