--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ SafetyPass is a simple password system that generates computer generated passwor
 which launches a separate iframe (not accesible to the parent site). The iframe launches a password generator which
 takes a password and a domain and generates a site specific password. The passwords are never stored anywhere and
 our never communicated with our server. To get started, drag the link below onto your bookmarks bar, and click it whenever
-you need a site speicifc password.
+you need a site specifc password.
 <p>
 <a href="javascript:(function(){var%20s=document.createElement('script');s.charset='UTF-8';s.src='//patrickms.github.io/SafetyPass/safetypass.js';document.body.appendChild(s)})();">SafetyPass</a>
 
@@ -16,5 +16,11 @@ you need a site speicifc password.
 <blockquote>
 javascript:(function(){var%20s=document.createElement('script');s.charset='UTF-8';s.src='//patrickms.github.io/SafetyPass/safetypass.js';document.body.appendChild(s)})();
 </blockquote>
+<p>
+  Is your favorite site blocking SafetyPass? You can also visit the SafetyPass screen directly 
+  at 
+  <a href="https://patrickms.github.io/SafetyPass/safetypass.html">https://patrickms.github.io/SafetyPass/safetypass.html</a>.
+  
+</p>
 </body>
 </html>
